# purview

./: .gitignore  LICENSE  purview.cabal
src/Control/Monad/: Progress.hs
src/Graphics/Forensics/: Algorithms.hs  Analyser.hs  Analysers.hs  Array.hs  Channels.hs  Color.hs  Image.hs  Matrix.hs  Report.hs  Shape.hs  Utilities.hs  Utils.hs
src/Graphics/Forensics/Algorithms/: Convolve.hs  DFT.hs  FFTW.hs  Fragmentize.hs  ImageUtilities.hs  Interpolate.hs
src/Graphics/Forensics/Analyser/: Copymove.hsc  Demosaic.hs  LocalCFA.hs  LuminanceGradient.hs  Test.hs  copymove.c  copymove.h
src/Graphics/Forensics/Runner/: Console.hs
test/: Test.hs
test/Test/Control/Monad/: Progress.hs
test/Test/Graphics/Forensics/: Algorithms.hs  Array.hs  Channels.hs  Image.hs  Matrix.hs
