-- The name of the package.
Name:
  purview

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:
  0.1

-- A short (one-line) description of the package.
-- Synopsis:

-- A longer description of the package.
-- Description:

-- URL for the project homepage or repository.
Homepage:
  https://github.com/Purview/purview

-- The license under which the package is released.
License:
  BSD3

-- The file containing the license text.
License-file:
  LICENSE

-- The package author(s).
Author:
  David Flemström, Moritz Roth

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:
  david.flemstrom@gmail.com

-- A copyright notice.
-- Copyright:

Category:
  Graphics

Build-type:
  Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:
  >= 1.10

Library
  Default-language:
    Haskell2010

  Default-extensions:
    FunctionalDependencies,
    MultiParamTypeClasses,
    OverloadedStrings,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances

  GHC-options:
    -Wall -Werror -ddump-splices -fno-warn-orphans

  Hs-source-dirs:
    src

  -- Modules exported by the library.
  Exposed-modules:
    Control.Monad.Progress,
    Graphics.Forensics.Algorithms,
    Graphics.Forensics.Analyser,
    Graphics.Forensics.Image,
    Graphics.Forensics.Report,
    Graphics.Forensics.Shape

  -- Packages needed in order to build this package.
  Build-depends:
    base                        == 4.*,
    colour                      == 2.3.*,
    array                       == 0.3.*,
    monad-coroutine             == 0.7.*,
    mtl                         == 2.0.*,
    repa                        == 2.0.*,
    repa-algorithms             == 2.0.*,
    repa-devil                  == 0.1.*,
    repa-io                     == 2.0.*,
    text                        == 0.11.*,
    transformers                == 0.2.*,
    unordered-containers        == 0.1.*,
    vect                        == 0.4.*,
    vector                      == 0.7.*

  -- Modules not exported by this package.
  Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:

Test-suite test-purview
  Type:
    exitcode-stdio-1.0

  Default-language:
    Haskell2010

  Default-extensions:
    FlexibleInstances,
    TemplateHaskell

  GHC-options:
    -Wall -Werror -fno-warn-orphans

  Hs-source-dirs:
    test

  Main-is:
    Test.hs

  Build-depends:
    base                        == 4.*,
    colour                      == 2.3.*,
    purview                     == 0.1.*,
    repa                        == 2.0.*,
    test-framework              == 0.4.*,
    test-framework-th           == 0.2.*,
    test-framework-quickcheck2  == 0.2.*,
    QuickCheck                  == 2.4.*
