-- The name of the package.
Name:
  purview

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:
  0.1

-- A short (one-line) description of the package.
-- Synopsis:

-- A longer description of the package.
-- Description:

-- URL for the project homepage or repository.
Homepage:
  https://github.com/Purview/purview

-- The license under which the package is released.
License:
  GPL-3

-- The file containing the license text.
License-file:
  LICENSE

-- The package author(s).
Author:
  David Flemström, Moritz Roth

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:
  mr2211@imperial.ac.uk

-- A copyright notice.
-- Copyright:

Category:
  Graphics

Build-type:
  Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:
  >= 1.10

Library
  Default-language:
    Haskell2010

  Default-extensions:
    BangPatterns,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    MultiParamTypeClasses,
    OverloadedStrings,
    QuasiQuotes,
    ScopedTypeVariables,
    TypeFamilies,
    TypeOperators

  GHC-options:
    -Wall -Werror -ddump-splices -fno-warn-orphans
    -Odph -rtsopts -threaded
    -funfolding-use-threshold1000 -funfolding-keeness-factor1000
    -fllvm -optlo-O3

  Hs-source-dirs:
    src

  -- Modules exported by the library.
  Exposed-modules:
    Control.Monad.Progress,
    Graphics.Forensics.Algorithms,
    Graphics.Forensics.Algorithms.Convolve,
    Graphics.Forensics.Algorithms.DFT,
    Graphics.Forensics.Algorithms.FFTW,
    Graphics.Forensics.Algorithms.Fragmentize,
    Graphics.Forensics.Analyser,
    Graphics.Forensics.Array,
    Graphics.Forensics.Channels,
    Graphics.Forensics.Color,
    Graphics.Forensics.Image,
    Graphics.Forensics.Report,
    Graphics.Forensics.Shape,
    Graphics.Forensics.Utilities,

    Graphics.Forensics.Analysers,

    Graphics.Forensics.Analyser.Test,
    Graphics.Forensics.Analyser.Demosaic,
    Graphics.Forensics.Analyser.LuminanceGradient,
    Graphics.Forensics.Analyser.LocalCFA

  -- Packages needed in order to build this package.
  Build-depends:
    base                        == 4.5.*,
    array                       == 0.4.*,
    carray                      == 0.1.5.*,
    colour                      == 2.3.*,
    containers                  == 0.4.*,
    deepseq                     == 1.3.*,
    fft                         == 0.1.7.*,
    monad-coroutine             == 0.7.*,
    mtl                         == 2.0.*,
    repa                        == 3.2.*,
    repa-algorithms             == 3.2.*,
    repa-devil                  == 0.3.*,
    repa-io                     == 3.2.*,
    storable-complex            == 0.2.*,
    text                        == 0.11.*,
    transformers                == 0.2.*,
    type-level-natural-number   == 1.1.*,
    vect                        == 0.4.*,
    vector                      == 0.9.*,
    vector-algorithms           == 0.5.*,
    vector-fftw                 == 0.1.*

  -- Modules not exported by this package.
  Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:

Executable purview-console
  Default-language:
    Haskell2010

  Default-extensions:
    DeriveDataTypeable,
    OverloadedStrings

  GHC-options:
    -Wall -Werror -threaded -rtsopts

  Main-is:
    src/Graphics/Forensics/Runner/Console.hs

  Build-depends:
    base                        == 4.5.*,
    ansi-terminal               == 0.5.*,
    containers                  == 0.4.*,
    cmdargs                     == 0.9.*,
    mtl                         == 2.0.*,
    old-locale                  == 1.0.*,
    purview                     == 0.1.*,
    text                        == 0.11.*,
    time                        == 1.4.*

Test-suite test-purview
  Type:
    exitcode-stdio-1.0

  Default-language:
    Haskell2010

  Default-extensions:
    FlexibleInstances,
    TemplateHaskell

  GHC-options:
    -Wall -Werror -fno-warn-orphans

  Hs-source-dirs:
    test

  Main-is:
    Test.hs

  Build-depends:
    base                        == 4.5.*,
    array                       == 0.4.*,
    colour                      == 2.3.*,
    purview                     == 0.1.*,
    repa                        == 3.2.*,
    repa-algorithms             == 3.2.*,
    test-framework              == 0.4.*,
    test-framework-th           == 0.2.*,
    test-framework-quickcheck2  == 0.2.*,
    type-level-natural-number   == 1.1.*,
    QuickCheck                  == 2.4.*
